go green y cambios menores

--- a/shipping/nueva2025/clients.html
+++ b/shipping/nueva2025/clients.html
@@ -41,13 +41,13 @@
                   <a class="nav-link" href="./index.html">The Company</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" href="./services.html">Services</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./clients.html">Clients</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Go Green</a>
+                  <a class="nav-link" href="./green.html">Go Green</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contact.html">Contact</a>
@@ -86,42 +86,51 @@
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/royalcaribbean.jpg" alt="" style="transform: scale(1.5)"/>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/royalcaribbean.jpg" alt=""
+                    style="transform: scale(1.5)" />
                 </figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/celebritycruiseslogo.png" alt="" style="transform: scale(1.5)"/>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/celebritycruiseslogo.png" alt=""
+                    style="transform: scale(1.5)" />
                 </figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/oceaniacruises.jpg" alt="" style="transform: scale(1.5)"/>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/oceaniacruises.jpg" alt=""
+                    style="transform: scale(1.5)" />
                 </figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/norweigan.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/norweigan.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/costa.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/costa.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/aida.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/aida.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/japangrace.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/japangrace.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/azamara.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/azamara.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/vikingcruises.png" alt="" style="transform: scale(1.5)"/>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/vikingcruises.png" alt=""
+                    style="transform: scale(1.5)" />
                 </figure>
               </div>
               <!--/column -->
@@ -147,11 +156,13 @@
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/yangming.jpg" alt="" style="transform: scale(2)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/yangming.jpg" alt=""
+                    style="transform: scale(2)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/hapaglloyd.jpg" alt="" style="transform: scale(2)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/hapaglloyd.jpg" alt=""
+                    style="transform: scale(2)" /></figure>
               </div>
               <!--/column -->
             </div>
@@ -176,39 +187,48 @@
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/cosco.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/cosco.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/kline.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/kline.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/norden.png" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/norden.png" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/mur.png" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/mur.png" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/spliethoff.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/spliethoff.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/andritz.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/andritz.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/pacificbasin.png" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/pacificbasin.png" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/jlauritzen.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/jlauritzen.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/hongfa.jfif" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/hongfa.jfif" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
             </div>
@@ -233,27 +253,33 @@
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/whoship.png" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/whoship.png" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/noatum.png" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/noatum.png" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/nextmaritime.png" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/nextmaritime.png" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/vship.png" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/vship.png" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/agunsa.png" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/agunsa.png" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/wallem.png" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/wallem.png" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
             </div>
@@ -278,19 +304,23 @@
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/drilling.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/drilling.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/bourbon.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/bourbon.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/sk.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/sk.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/winson.jpg" alt="" style="transform: scale(1.5)"/></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/winson.jpg" alt=""
+                    style="transform: scale(1.5)" /></figure>
               </div>
               <!--/column -->
 
@@ -311,7 +341,7 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-lg-4">
           <div class="widget">
-            <img class="mb-4" src="./assets/img/logo-light.png" srcset="./assets/img/logo-light@2x.png 2x" alt="" />
+            <img class="mb-4" src="./assets/img/logo-light.png" />
             <p class="mb-4">© Repremar Group of Companies.</p>
             <!-- /.social -->
           </div>
@@ -323,9 +353,9 @@
             <h4 class="widget-title mb-3 text-white">Learn More</h4>
             <ul class="list-unstyled mb-0">
               <li><a href="./index.html">The Company</a></li>
-              <li><a href="#">Services</a></li>
+              <li><a href="./services.html">Services</a></li>
               <li><a href="./clients.html">Clients</a></li>
-              <li><a href="#">Go Green</a></li>
+              <li><a href="./green.html">Go Green</a></li>
               <li><a href="./contact.html">Contact Us</a></li>
             </ul>
           </div>
