--- a/shipping/nueva2025/contact.html
+++ b/shipping/nueva2025/contact.html
@@ -41,13 +41,13 @@
                   <a class="nav-link" href="./index.html">The Company</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" href="./services.html">Services</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./clients.html">Clients</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Go Green</a>
+                  <a class="nav-link" href="./green.html">Go Green</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contact.html">Contact</a>
@@ -81,7 +81,9 @@
               <div class="row gx-0">
                 <div class="col-lg-6 align-self-stretch">
                   <div class="map map-full rounded-top rounded-lg-start">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.963149534835!2d-56.208426123518805!3d-34.9073742735997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f7f80faf9538b%3A0x81293442d5913632!2sMisiones%201372%2C%2011000%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses!2suy!4v1745245783149!5m2!1ses!2suy" style="width:100%; height: 100%; border:0" allowfullscreen></iframe>
+                    <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.963149534835!2d-56.208426123518805!3d-34.9073742735997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f7f80faf9538b%3A0x81293442d5913632!2sMisiones%201372%2C%2011000%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses!2suy!4v1745245783149!5m2!1ses!2suy"
+                      style="width:100%; height: 100%; border:0" allowfullscreen></iframe>
                   </div>
                   <!-- /.map -->
                 </div>
@@ -115,7 +117,7 @@
                       <div>
                         <h5 class="mb-1">E-mail</h5>
                         <p class="mb-0"><a href="mailto:info@repremar.com" class="link-body">info@repremar.com</a></p>
-                        
+
                       </div>
                     </div>
                     <!--/div -->
@@ -139,12 +141,13 @@
       <div class="container pt-10 pt-md-14 pb-8 text-center">
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-7">
-            <figure><img class="w-auto" src="./assets/img/photos/repremar11.jpg"/></figure>
+            <figure><img class="w-auto" src="./assets/img/photos/repremar11.jpg" /></figure>
           </div>
           <!-- /column -->
           <div class="col-md-10 offset-md-1 offset-lg-0 col-lg-5 text-center text-lg-start">
             <h1 class="display-1 mb-5 mx-md-n5 mx-lg-0">Let's Build Something Great Together!</h1>
-            <p class="lead fs-lg mb-7">We're always open to new collaborations and committed to delivering real value to our clients.</p>
+            <p class="lead fs-lg mb-7">We're always open to new collaborations and committed to delivering real value to
+              our clients.</p>
             <span><a class="btn btn-primary rounded-pill me-2">Email</a></span>
           </div>
           <!-- /column -->
@@ -162,7 +165,7 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-lg-4">
           <div class="widget">
-            <img class="mb-4" src="./assets/img/logo-light.png" srcset="./assets/img/logo-light@2x.png 2x" alt="" />
+            <img class="mb-4" src="./assets/img/logo-light.png" />
             <p class="mb-4">© Repremar Group of Companies.</p>
             <!-- /.social -->
           </div>
@@ -174,9 +177,9 @@
             <h4 class="widget-title mb-3 text-white">Learn More</h4>
             <ul class="list-unstyled mb-0">
               <li><a href="./index.html">The Company</a></li>
-              <li><a href="#">Services</a></li>
+              <li><a href="./services.html">Services</a></li>
               <li><a href="./clients.html">Clients</a></li>
-              <li><a href="#">Go Green</a></li>
+              <li><a href="./green.html">Go Green</a></li>
               <li><a href="./contact.html">Contact Us</a></li>
             </ul>
           </div>
