--- a/shipping/nueva2025/index.html
+++ b/shipping/nueva2025/index.html
@@ -41,13 +41,13 @@
                   <a class="nav-link" href="#">The Company</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" href="./services.html">Services</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./clients.html">Clients</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Go Green</a>
+                  <a class="nav-link" href="./green.html">Go Green</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contact.html">Contact</a>
@@ -156,6 +156,7 @@
                     bunkering and lubricants.</li>
                 </ul>
               </div>
+
               <!--/.card-body -->
             </div>
             <!-- /.card -->
@@ -293,7 +294,8 @@
       <div class="container pt-12 pt-md-14 pb-14 pb-md-16">
         <div class="row gx-md-8 gx-xl-12 gy-6 align-items-center">
           <div class="col-md-8 col-lg-6 mx-auto">
-            <div><img class="img-fluid" src="./assets/img/calidad.png" /><img class="img-fluid mt-4" src="./assets/img/calidad2.png"/></div>
+            <div><img class="img-fluid" src="./assets/img/calidad.png" /><img class="img-fluid mt-4"
+                src="./assets/img/calidad2.png" /></div>
           </div>
           <!--/column -->
           <div class="col-lg-6">
@@ -324,7 +326,7 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-lg-4">
           <div class="widget">
-            <img class="mb-4" src="./assets/img/logo-light.png" srcset="./assets/img/logo-light@2x.png 2x" alt="" />
+            <img class="mb-4" src="./assets/img/logo-light.png" />
             <p class="mb-4">© Repremar Group of Companies.</p>
             <!-- /.social -->
           </div>
@@ -336,9 +338,9 @@
             <h4 class="widget-title mb-3 text-white">Learn More</h4>
             <ul class="list-unstyled mb-0">
               <li><a href="#">The Company</a></li>
-              <li><a href="#">Services</a></li>
+              <li><a href="./services.html">Services</a></li>
               <li><a href="./clients.html">Clients</a></li>
-              <li><a href="#">Go Green</a></li>
+              <li><a href="./green.html">Go Green</a></li>
               <li><a href="./contact.html">Contact Us</a></li>
             </ul>
           </div>
