--- a/shipping/nueva2025/green.html
+++ b/shipping/nueva2025/green.html
@@ -93,9 +93,9 @@
                 <div class="col-lg-7 order-lg-2">
                   <div class="row gx-md-5 gy-5">
                     <div class="col-md-5 offset-md-1 align-self-end">
-                      <div class="card bg-pale-yellow">
+                      <div class="card bg-pale-leaf">
                         <div class="card-body">
-                          <img src="./assets/img/icons/lineal/check-2.svg" class="svg-inject icon-svg icon-svg-md text-yellow mb-3" alt="" />
+                          <img src="./assets/img/icons/lineal/check-2.svg" class="svg-inject icon-svg icon-svg-md text-leaf mb-3" alt="" />
                           <h4>Comprehensive Environmental Strategy</h4>
                           <p class="mb-0">By investing in energy-efficient practices, we significantly lower our carbon footprint, ensuring that our logistics solutions are not only effective but also environmentally responsible.</p>
                         </div>
