--- a/shipping/nueva2025/contact.html
+++ b/shipping/nueva2025/contact.html
@@ -148,7 +148,7 @@
             <h1 class="display-1 mb-5 mx-md-n5 mx-lg-0">Let's Build Something Great Together!</h1>
             <p class="lead fs-lg mb-7">We're always open to new collaborations and committed to delivering real value to
               our clients.</p>
-            <span><a class="btn btn-primary rounded-pill me-2">Email</a></span>
+            <span><a class="btn btn-primary rounded-pill me-2"href="mailto:info@repremar.com">Email</a></span>
           </div>
           <!-- /column -->
         </div>
@@ -190,7 +190,7 @@
           <div class="widget">
             <h4 class="widget-title mb-3 text-white">Get in Touch</h4>
             <address>Misiones 1372 "De Los Patricios" Bldg. 1st Floor, Montevideo, Uruguay</address>
-            <a href="mailto:first.last@email.com">info@repremar.com</a><br /> +598 2916 1336
+            <a href="mailto:info@repremar.com">info@repremar.com</a><br /> +598 2916 1336
           </div>
           <!-- /.widget -->
         </div>
