--- a/shipping/nueva2025/services.html
+++ b/shipping/nueva2025/services.html
@@ -97,104 +97,147 @@
             <!-- /.container -->
         </section>
         <!-- /section -->
-        <section class="wrapper bg-light py-5">
-            <div class="container text-center">
-                <table style="width: 100%; table-layout: fixed;">
-                    <tr>
-                        <td>
-                            <div class="circle-wrapper">
-                                <div class="circle-text">MVD</div>
-                                <img src="./assets/img/images-ports.png" class="port-img" />
+        <section class="ports-wrapper" style="background-color: #f8f9fa; padding: 40px 0;">
+            <div class="container" style="text-align: center; max-width: 960px; margin: 0 auto;">
+                <div class="ports-grid" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
+
+                    <!-- MONTEVIDEO -->
+                    <div class="port" style="flex: 1 1 45%; max-width: 120px; text-align: center;">
+                        <div class="circle-wrapper"
+                            style="position: relative; width: 80px; height: 80px; margin: 0 auto 8px; background-color: #d21b26; border-radius: 50%;">
+                            <img src="./assets/img/images-ports.png" alt="Puerto MVD"
+                                style="position: absolute; width: 40px; top: 50%; left: 50%; transform: translate(-50%, -55%); z-index: 1;" />
+                            <div class="circle-text"
+                                style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); color: #fff; font-weight: bold; font-size: 14px; z-index: 2;">
+                                MVD
                             </div>
-                            <div class="port-label">MONTEVIDEO</div>
-                        </td>
-                        <td>
-                            <div class="circle-wrapper">
-                                <div class="circle-text">PDP</div>
-                                <img src="./assets/img/images-ports.png" class="port-img" />
+                        </div>
+                        <div class="port-label" style="color: #1e3766; font-weight: bold; font-size: 14px;">
+                            MONTEVIDEO
+                        </div>
+                    </div>
+
+                    <!-- PUNTA DEL ESTE -->
+                    <div class="port" style="flex: 1 1 45%; max-width: 120px; text-align: center;">
+                        <div class="circle-wrapper"
+                            style="position: relative; width: 80px; height: 80px; margin: 0 auto 8px; background-color: #d21b26; border-radius: 50%;">
+                            <img src="./assets/img/images-ports.png" alt="Puerto PDP"
+                                style="position: absolute; width: 40px; top: 50%; left: 50%; transform: translate(-50%, -55%); z-index: 1;" />
+                            <div class="circle-text"
+                                style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); color: #fff; font-weight: bold; font-size: 14px; z-index: 2;">
+                                PDP
                             </div>
-                            <div class="port-label">PUNTA DEL ESTE</div>
-                        </td>
-                        <td>
-                            <div class="circle-wrapper">
-                                <div class="circle-text">NVP</div>
-                                <img src="./assets/img/images-ports.png" class="port-img" />
+                        </div>
+                        <div class="port-label" style="color: #1e3766; font-weight: bold; font-size: 14px;">
+                            PUNTA DEL ESTE
+                        </div>
+                    </div>
+
+                    <!-- NUEVA PALMIRA -->
+                    <div class="port" style="flex: 1 1 45%; max-width: 120px; text-align: center;">
+                        <div class="circle-wrapper"
+                            style="position: relative; width: 80px; height: 80px; margin: 0 auto 8px; background-color: #d21b26; border-radius: 50%;">
+                            <img src="./assets/img/images-ports.png" alt="Puerto NVP"
+                                style="position: absolute; width: 40px; top: 50%; left: 50%; transform: translate(-50%, -55%); z-index: 1;" />
+                            <div class="circle-text"
+                                style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); color: #fff; font-weight: bold; font-size: 14px; z-index: 2;">
+                                NVP
                             </div>
-                            <div class="port-label">NUEVA PALMIRA</div>
-                        </td>
-                        <td>
-                            <div class="circle-wrapper">
-                                <div class="circle-text">FZB</div>
-                                <img src="./assets/img/images-ports.png" class="port-img" />
+                        </div>
+                        <div class="port-label" style="color: #1e3766; font-weight: bold; font-size: 14px;">
+                            NUEVA PALMIRA
+                        </div>
+                    </div>
+
+                    <!-- FRAY BENTOS -->
+                    <div class="port" style="flex: 1 1 45%; max-width: 120px; text-align: center;">
+                        <div class="circle-wrapper"
+                            style="position: relative; width: 80px; height: 80px; margin: 0 auto 8px; background-color: #d21b26; border-radius: 50%;">
+                            <img src="./assets/img/images-ports.png" alt="Puerto FZB"
+                                style="position: absolute; width: 40px; top: 50%; left: 50%; transform: translate(-50%, -55%); z-index: 1;" />
+                            <div class="circle-text"
+                                style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); color: #fff; font-weight: bold; font-size: 14px; z-index: 2;">
+                                FZB
                             </div>
-                            <div class="port-label">FRAY BENTOS</div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="circle-wrapper">
-                                <div class="circle-text">LAP</div>
-                                <img src="./assets/img/images-ports.png" class="port-img" />
+                        </div>
+                        <div class="port-label" style="color: #1e3766; font-weight: bold; font-size: 14px;">
+                            FRAY BENTOS
+                        </div>
+                    </div>
+
+                    <!-- LA PALOMA -->
+                    <div class="port" style="flex: 1 1 45%; max-width: 120px; text-align: center;">
+                        <div class="circle-wrapper"
+                            style="position: relative; width: 80px; height: 80px; margin: 0 auto 8px; background-color: #d21b26; border-radius: 50%;">
+                            <img src="./assets/img/images-ports.png" alt="Puerto LAP"
+                                style="position: absolute; width: 40px; top: 50%; left: 50%; transform: translate(-50%, -55%); z-index: 1;" />
+                            <div class="circle-text"
+                                style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); color: #fff; font-weight: bold; font-size: 14px; z-index: 2;">
+                                LAP
                             </div>
-                            <div class="port-label">LA PALOMA</div>
-                        </td>
-                        <td>
-                            <div class="circle-wrapper">
-                                <div class="circle-text">JIT</div>
-                                <img src="./assets/img/images-ports.png" class="port-img" />
+                        </div>
+                        <div class="port-label" style="color: #1e3766; font-weight: bold; font-size: 14px;">
+                            LA PALOMA
+                        </div>
+                    </div>
+
+                    <!-- JOSE IGNACIO -->
+                    <div class="port" style="flex: 1 1 45%; max-width: 120px; text-align: center;">
+                        <div class="circle-wrapper"
+                            style="position: relative; width: 80px; height: 80px; margin: 0 auto 8px; background-color: #d21b26; border-radius: 50%;">
+                            <img src="./assets/img/images-ports.png" alt="Puerto JIT"
+                                style="position: absolute; width: 40px; top: 50%; left: 50%; transform: translate(-50%, -55%); z-index: 1;" />
+                            <div class="circle-text"
+                                style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); color: #fff; font-weight: bold; font-size: 14px; z-index: 2;">
+                                JIT
                             </div>
-                            <div class="port-label">JOSE IGNACIO</div>
-                        </td>
-                        <td>
-                            <div class="circle-wrapper">
-                                <div class="circle-text">PDU</div>
-                                <img src="./assets/img/images-ports.png" class="port-img" />
+                        </div>
+                        <div class="port-label" style="color: #1e3766; font-weight: bold; font-size: 14px;">
+                            JOSE IGNACIO
+                        </div>
+                    </div>
+
+                    <!-- PAYSANDÚ -->
+                    <div class="port" style="flex: 1 1 45%; max-width: 120px; text-align: center;">
+                        <div class="circle-wrapper"
+                            style="position: relative; width: 80px; height: 80px; margin: 0 auto 8px; background-color: #d21b26; border-radius: 50%;">
+                            <img src="./assets/img/images-ports.png" alt="Puerto PDU"
+                                style="position: absolute; width: 40px; top: 50%; left: 50%; transform: translate(-50%, -55%); z-index: 1;" />
+                            <div class="circle-text"
+                                style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); color: #fff; font-weight: bold; font-size: 14px; z-index: 2;">
+                                PDU
                             </div>
-                            <div class="port-label">PAYSANDÚ</div>
-                        </td>
-                        <td>
-                            <div class="circle-wrapper">
-                                <div class="circle-text">PPT</div>
-                                <img src="./assets/img/images-ports.png" class="port-img" />
+                        </div>
+                        <div class="port-label" style="color: #1e3766; font-weight: bold; font-size: 14px;">
+                            PAYSANDÚ
+                        </div>
+                    </div>
+
+                    <!-- PUNTA PEREIRA -->
+                    <div class="port" style="flex: 1 1 45%; max-width: 120px; text-align: center;">
+                        <div class="circle-wrapper"
+                            style="position: relative; width: 80px; height: 80px; margin: 0 auto 8px; background-color: #d21b26; border-radius: 50%;">
+                            <img src="./assets/img/images-ports.png" alt="Puerto PPT"
+                                style="position: absolute; width: 40px; top: 50%; left: 50%; transform: translate(-50%, -55%); z-index: 1;" />
+                            <div class="circle-text"
+                                style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); color: #fff; font-weight: bold; font-size: 14px; z-index: 2;">
+                                PPT
                             </div>
-                            <div class="port-label">PUNTA PEREIRA</div>
-                        </td>
-                    </tr>
-                </table>
+                        </div>
+                        <div class="port-label" style="color: #1e3766; font-weight: bold; font-size: 14px;">
+                            PUNTA PEREIRA
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
+            <!-- Media query embebida para pantallas ≥600px -->
             <style>
-                .port-img {
-                    width: 80px;
-                    position: relative;
-                    z-index: 1;
-                }
-
-                .circle-wrapper {
-                    position: relative;
-                    display: inline-block;
-                    margin-bottom: 10px;
-                }
-
-                .circle-text {
-                    position: absolute;
-                    bottom: 8px;
-                    left: 50%;
-                    transform: translateX(-50%);
-                    color: white;
-                    font-weight: bold;
-                    z-index: 2;
-                    font-size: 14px;
-                }
-
-                .port-label {
-                    color: #1e3766;
-                    font-weight: bold;
-                    margin-top: 5px;
-                }
-
-                td {
-                    padding: 20px 10px;
+                @media (min-width: 600px) {
+                    .ports-wrapper .port {
+                        flex: 1 1 22% !important;
+                    }
                 }
             </style>
         </section>
