update y de ddl

--- a/shipping/nueva2025/index.html
+++ b/shipping/nueva2025/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="An impressive and flawless site template that includes various UI elements and countless features, attractive ready-made blocks and rich pages, basically everything you need to create a unique and professional website.">
-  <meta name="keywords"
-    content="bootstrap 5, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup, html5 template, site template">
-  <meta name="author" content="elemis">
-  <title>Repremar Shipping
-  </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="COMPANIES. Maritime agents, international cargo transportation, and integral logistics services. We are REPREMAR. WHY REPREMAR? ADVANTAGES. One-Stop-Shop">
+    <meta name="keywords"
+        content="Repremar, Shipping, Logistics, Port, Uruguay, Montevideo, Mritime Agents, international cargo, Shipping Agency">
+    <meta name="author" content="Repremar">
+    <title>Repremar Shipping
+    </title>
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -165,7 +165,7 @@
           <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
             <div class="card shadow-lg">
               <figure class="card-img-top">
-                <a><img class="img-fluid" src="./assets/img/photos/repremar7.jpg" /></a>
+                <a><img class="img-fluid" src="./assets/img/photos/ChatGPT Image 23 abr 2025, 12_27_04.png" /></a>
               </figure>
               <div class="card-body p-6">
                 <h3 class="fs-21 mb-0">BACK-OFFICE</h3>
